Fixed gap and border for photos

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,6 +147,7 @@
      width: 100%;
     /* height: 100%;*/
     border-radius: 0; 
+    padding: 10px;
    object-fit: cover;
   
    
